# UBIC-android-wallet

./: .gitignore  LICENSE  README.md  build.gradle
app/: CMakeCache.txt  CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/network/ubic/ubic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Address.h  AddressHelper.h  Base58.cpp  Base64.h  Config.cpp  Config.h  UAmount.h  Wallet.cpp  Wallet.h  native-lib.cpp
app/src/main/cpp/CertStore/: Cert.cpp  Cert.h
app/src/main/cpp/Crypto/: ECCtools.cpp  PassportCrypto.cpp  VerifySignature.cpp
app/src/main/cpp/FS/: FS.cpp  FS.h
app/src/main/cpp/NtpEsk/: NtpEsk.cpp  NtpEskSignatureRequestObject.h  NtpEskSignatureVerificationObject.h
app/src/main/cpp/NtpRsk/: NtpRsk.cpp  NtpRskSignatureRequestObject.h  NtpRskSignatureVerificationObject.h
app/src/main/cpp/PassportReader/PKCS7/: PKCS7Parser.cpp  PKCS7Parser.h
app/src/main/cpp/Serialization/: serialize.h  streams.h
app/src/main/cpp/Tools/: Hexdump.cpp  Log.cpp  Log.h  VectorTool.cpp
app/src/main/cpp/Transaction/: Transaction.cpp  Transaction.h  TransactionHelper.cpp  TransactionHelper.h
app/src/main/java/network/ubic/ubic/: BalanceListAdapter.java  BalanceListItem.java  ChallengeParser.java  Currencies.java  GetBalance.java  HttpHandler.java  MainActivity.java  OnGetBalanceCompleted.java  PassportStore.java  PrivateKeyListAdapter.java  PrivateKeyListItem.java  PrivateKeyStore.java  PrivateKeyStoreOld.java  TransactionListAdapter.java  TransactionListItem.java
app/src/main/java/network/ubic/ubic/AsyncTasks/: APIServerSelector.java  GetBalance.java  GetTransactionFees.java  OnGetBalanceCompleted.java  OnGetTransactionFeesCompleted.java  OnPrivateKeyFragmentPopulateCompleted.java  OnReceiveFragmentPopulateCompleted.java  OnSendTransactionCompleted.java  PrivateKeyPopulate.java  ReceiveFragmentPopulate.java  SendTransaction.java
app/src/main/java/network/ubic/ubic/BitiAndroid/: AbstractNfcActivity.java  TagProvider.java
app/src/main/java/network/ubic/ubic/BitiMRTD/Constants/: Iso19794Constants.java  MrtdConstants.java
app/src/main/java/network/ubic/ubic/BitiMRTD/Converter/: ASN1Converter.java
app/src/main/java/network/ubic/ubic/BitiMRTD/NFC/: Apdu.java  Doc9303Apdu.java
app/src/main/java/network/ubic/ubic/BitiMRTD/Parser/: DG1Parser.java  EFSODParser.java  TagParser.java
app/src/main/java/network/ubic/ubic/BitiMRTD/Reader/: AbstractReader.java  AesReader.java  BacInfo.java  DESedeReader.java  ProgressListenerInterface.java
app/src/main/java/network/ubic/ubic/BitiMRTD/Tools/: AES.java  AESCMAC.java  Crypto.java  Tools.java
app/src/main/java/network/ubic/ubic/Fragments/: BalanceFragment.java  KycFragment.java  MyUBIFragment.java  NewPrivateKeyFragment.java  PrivateKeyFragment.java  ReadingPassportFragment.java  ReceiveFragment.java  RegisterPassportFragment.java  SendFragment.java  WaitForNfcFragment.java
app/src/main/java/network/ubic/ubic/Interfaces/: QrCodeCallbackInterface.java
app/src/main/res/drawable/: ic_info_outline_white_48px.xml  menu_balance.xml  menu_kyc.xml  menu_my_ubi.xml  menu_private_keys.xml  menu_receive.xml  scan_qr_code.xml
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  balance_list_item.xml  content_main.xml  fragment_balance.xml  fragment_kyc.xml  fragment_my_ubi.xml  fragment_new_private_key.xml  fragment_private_key.xml  fragment_reading_passport.xml  fragment_receive.xml  fragment_register_passport.xml  fragment_send.xml  fragment_wait_for_nfc.xml  nav_header_main.xml  private_key_list_item.xml  transaction_list_item.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-cn/: strings.xml
app/src/main/res/values-fr/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/network/ubic/ubic/: ExampleUnitTest.java
distribution/openssl/arm64-v8a/usr/local/include/openssl/: opensslconf.h
distribution/openssl/arm64-v8a/usr/local/lib/pkgconfig/: openssl.pc
distribution/openssl/arm64-v8a/usr/local/share/doc/openssl/html/man1/: crl.html  dhparam.html  genpkey.html  openssl.html  pkcs12.html  pkey.html  pkeyutl.html  s_time.html
distribution/openssl/arm64-v8a/usr/local/share/doc/openssl/html/man3/: ASN1_STRING_new.html  BIO_ADDRINFO.html  BIO_connect.html  BIO_f_buffer.html  BIO_f_md.html  (+77 more)
distribution/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/openssl/armeabi/include/openssl/: opensslconf.h
distribution/openssl/armeabi/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/openssl/armeabi/usr/local/include/openssl/: opensslconf.h
distribution/openssl/armeabi/usr/local/lib/pkgconfig/: libcrypto.pc
distribution/openssl/x86/include/openssl/: opensslconf.h
distribution/openssl/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
distribution/openssl/x86/usr/local/include/openssl/: opensslconf.h
distribution/openssl/x86_64/include/openssl/: opensslconf.h
gradle/wrapper/: gradle-wrapper.properties
(+443 files in other folders)
